# inprogress

./: 01_XAI_exercise_linear_lime_shap.ipynb  01_XAI_exercise_solution.ipynb  02_XAI_exercise_gradcam_feature_visualization.ipynb  02_XAI_exercise_solution.ipynb  03_XAI_exercise_solution.ipynb  1_Introduction_to_Python.ipynb  2024_ITAT_U1_TicTacToe.cpp  2_Numpy_Basics.ipynb  3_Debugging.ipynb  A1_Kalibration.py  A3_Versuch_Normierung_Skalierung.py  A3_labor_plots.py  A3_sauerstofffits_strahlung copy.py  A3_sauerstofffits_strahlung.py  ADE_Messstellen.py  ADE_TSM_abschnittsweise.py  AI-LHe-curve-20250517-1740.py  AbstractHammingTest.java  Adding_Parameters.py  Adding_Parameters_3d.py  Address.java  Anhang.tex  Application.java  ArrayPrinter.java  ArrayUtilities.java  ArrayUtility.java  Beispiel.m  Booking.java  BoundedStack.java  BoundedStack.java-solution  Box.java  BracketExpressionValidator.java  BreadthFirstSearch.java  BubbleSort.java  CMakeLists.txt  CMakePresets.json  Calculator.java  Car.java  Casting.java  Cell.java  (+528 more)
